# skope-rules

./: .gitignore  Makefile  pyproject.toml  setup.py
.github/workflows/: constraints.txt  tests.yml
