[tool.poetry]
name = "skope-rules"
version = "1.0.3"
packages = [
    {include = "skrules"},
]
exclude = ["skrules/tests/*"]
description = "Skope Rules (Patched for newer sklearn versions) "
authors = ["Xaipient Team <team@xaipient.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = ">=1.10.4"
scikit-learn = ">=0.17.1"
scipy = ">=0.17.0"
pandas = ">=0.18.1"
sphinx_gallery = ">=0.7.0"
xlrd = ">=0.9.0"

[tool.poetry.dev-dependencies]
nose = "^1.3.7"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
